// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Contact Page Component has expected snapshot when chat enabled 1`] = `
.emotion-0 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
}

@media (min-width:600px) {
  .emotion-0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

.emotion-1 {
  margin: 0;
  font-family: fontFamily;
  font-weight: 300;
  font-size: 3.5rem;
  line-height: 1.167;
  margin-bottom: 0.35em;
}

@media (min-width:600px) {
  .emotion-1 {
    font-size: 4.7129rem;
  }
}

@media (min-width:900px) {
  .emotion-1 {
    font-size: 5.3556rem;
  }
}

@media (min-width:1200px) {
  .emotion-1 {
    font-size: 5.9983rem;
  }
}

.emotion-2 {
  margin: 0;
  font-size: 0.9rem;
  font-family: fontFamily;
  font-weight: 400;
  line-height: 1.43;
}

.emotion-3 {
  margin: 0;
  font: inherit;
  color: #FA2742;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="MuiContainer-root MuiContainer-maxWidthLg emotion-0"
  data-testid="contact-page"
>
  <h1
    className="MuiTypography-root MuiTypography-h1 MuiTypography-gutterBottom emotion-1"
  >
    Contact
  </h1>
  <p
    className="MuiTypography-root MuiTypography-body2 emotion-2"
  >
    Please connect with me on 
    <a
      className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover emotion-3"
      href="https://www.linkedin.com/in/nicholeuf"
      onBlur={[Function]}
      onFocus={[Function]}
      rel="noopener"
      target="_blank"
    >
      LinkedIn
    </a>
     or send a message in chat
    . I look forward to hearing from you!
  </p>
</div>
`;

exports[`The Contact Page Component has expected snapshot when chat is not enabled 1`] = `
.emotion-0 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
}

@media (min-width:600px) {
  .emotion-0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    max-width: 1200px;
  }
}

.emotion-1 {
  margin: 0;
  font-family: fontFamily;
  font-weight: 300;
  font-size: 3.5rem;
  line-height: 1.167;
  margin-bottom: 0.35em;
}

@media (min-width:600px) {
  .emotion-1 {
    font-size: 4.7129rem;
  }
}

@media (min-width:900px) {
  .emotion-1 {
    font-size: 5.3556rem;
  }
}

@media (min-width:1200px) {
  .emotion-1 {
    font-size: 5.9983rem;
  }
}

.emotion-2 {
  margin: 0;
  font-size: 0.9rem;
  font-family: fontFamily;
  font-weight: 400;
  line-height: 1.43;
}

.emotion-3 {
  margin: 0;
  font: inherit;
  color: #FA2742;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="MuiContainer-root MuiContainer-maxWidthLg emotion-0"
  data-testid="contact-page"
>
  <h1
    className="MuiTypography-root MuiTypography-h1 MuiTypography-gutterBottom emotion-1"
  >
    Contact
  </h1>
  <p
    className="MuiTypography-root MuiTypography-body2 emotion-2"
  >
    Please connect with me on 
    <a
      className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover emotion-3"
      href="https://www.linkedin.com/in/nicholeuf"
      onBlur={[Function]}
      onFocus={[Function]}
      rel="noopener"
      target="_blank"
    >
      LinkedIn
    </a>
    . I look forward to hearing from you!
  </p>
</div>
`;
